fix alignment issue with feat blog posts on homepage

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -621,7 +621,6 @@ button {
   display: grid;
   grid-template-columns: 1fr;
   gap: var(--medium-spacing);
-  justify-items: center;
   align-items: start;
   overflow-x: hidden;
 }
